<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AudioRSS</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_add">Add</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_search">Search</string>
    <string name="action_play">Play</string>
    <string name="action_download">Download</string>
    <string name="action_web">Open website</string>
    <string name="add_feed_clipboard">Add feed from clipboard</string>
    
    <string name="pref_feed_ordering">Feeds order</string>
    <string name="pref_feed_ordering_summary">Choose how to order your feeds</string>
    <string name="pref_feed_ordering_default">reverse_time</string>
    
    <string name="pref_download_folder">Downloads folder</string>
    <string name="summary_pref_download_folder">Media will be dowloaded there</string>
    <string name="dialog_pref_download_folder">Set the folder to which media will be downloaded</string>
    
    
</resources>
